routing: fix start s is larger than end s

--- a/modules/routing/BUILD
+++ b/modules/routing/BUILD
@@ -34,4 +34,12 @@ cc_binary(
     ],
 )
 
+filegroup(
+    name = "routing_testdata",
+    srcs = glob([
+        "testdata/**",
+    ]),
+)
+
+
 cpplint()
