--- a/modules/routing/conf/routing.conf
+++ b/modules/routing/conf/routing.conf
@@ -4,5 +4,5 @@
 
 --use_road_id=true
 --enable_debug_mode=false
---debug_route_path=~/Desktop/route_debug.txt
---debug_passage_region_path=~/Desktop/passage_region_debug.bin
+--debug_route_path=/modules/routing/testdata/route_debug.txt
+--debug_passage_region_path=/modules/routing/testdata/passage_region_debug.bin
