Dreamview routing (backend) (#482)
* Dreamview routing (backend)

* Add log

* remove timer to process routing

--- a/modules/dreamview/backend/map/BUILD
+++ b/modules/dreamview/backend/map/BUILD
@@ -11,7 +11,7 @@ cc_library(
         "map_service.h",
     ],
     deps = [
-        "//modules/map/hdmap",
+        "//modules/map/pnc_map",
         "//third_party/json",
         "@glog//:glog",
     ],
