--- a/modules/dreamview/backend/map/BUILD
+++ b/modules/dreamview/backend/map/BUILD
@@ -11,6 +11,7 @@ cc_library(
         "map_service.h",
     ],
     deps = [
+        "//modules/common/util:points_downsampler",
         "//modules/map/pnc_map",
         "//third_party/json",
         "@glog//:glog",
