[Routing] Move conf variables to gflags (#498)

--- a/modules/routing/conf/routing.conf
+++ b/modules/routing/conf/routing.conf
@@ -6,3 +6,8 @@
 --enable_debug_mode=false
 --debug_route_path=/modules/routing/testdata/route_debug.txt
 --debug_passage_region_path=/modules/routing/testdata/passage_region_debug.bin
+
+--base_speed=4.167
+--left_turn_penalty=50
+--right_turn_penalty=20
+--uturn_penalty=100
