--- a/modules/planning/common/BUILD
+++ b/modules/planning/common/BUILD
@@ -44,6 +44,7 @@ cc_library(
     ],
     deps = [
         ":obstacle",
+        "//modules/planning/proto:planning_proto",
         "//modules/planning/reference_line",
     ],
 )
