--- a/modules/perception/obstacle/common/BUILD
+++ b/modules/perception/obstacle/common/BUILD
@@ -5,17 +5,17 @@ package(default_visibility = ["//visibility:public"])
 cc_library(
     name = "perception_obstacle_common",
     srcs = [
+        "file_system_util.cc",
         "geometry_util.cc",
         "graph_util.cc",
-        "file_system_util.cc",
         "hungarian_bigraph_matcher.cc",
         "pose_util.cc",
     ],
     hdrs = [
         "convex_hullxy.h",
-        "geometry_util.h",
         "disjoint_set.h",
         "file_system_util.h",
+        "geometry_util.h",
         "graph_util.h",
         "hungarian_bigraph_matcher.h",
         "pose_util.h",
@@ -25,8 +25,8 @@ cc_library(
     ],
     deps = [
         "//modules/common:log",
-        "//modules/perception/lib/pcl_util:pcl_util",
-        "//modules/perception/lib/base:base",
+        "//modules/perception/lib/base",
+        "//modules/perception/lib/pcl_util",
         "@eigen//:eigen",
     ],
 )
@@ -39,9 +39,8 @@ cc_test(
     ],
     deps = [
         ":perception_obstacle_common",
-        "@gtest//:main"
+        "@gtest//:main",
     ],
 )
 
 cpplint()
-
