--- a/modules/perception/obstacle/lidar/tracker/hm_tracker/BUILD
+++ b/modules/perception/obstacle/lidar/tracker/hm_tracker/BUILD
@@ -5,33 +5,35 @@ package(default_visibility = ["//visibility:public"])
 cc_library(
     name = "perception_obstacle_lidar_tracker_hm_tracker",
     srcs = [
-        "hm_tracker.cc",
-        "kalman_filter.cc",
-        "hungarian_matcher.cc",
-        "object_track.cc",
-        "tracked_object.cc",
-        "track_object_distance.cc",
         "feature_descriptor.cc",
+        "hm_tracker.cc",
+        "hungarian_matcher.cc",
+        "kalman_filter.cc",
+        "object_track.cc",
+        "track_object_distance.cc",
+        "tracked_object.cc",
     ],
     hdrs = [
-        "hm_tracker.h",
         "base_filter.h",
         "base_matcher.h",
-        "kalman_filter.h",
+        "feature_descriptor.h",
+        "hm_tracker.h",
         "hungarian_matcher.h",
+        "kalman_filter.h",
         "object_track.h",
-        "tracked_object.h",
         "track_object_distance.h",
-        "feature_descriptor.h"],
+        "tracked_object.h",
+    ],
     deps = [
+        "//modules/common",
+        "//modules/common:log",
+        "//modules/perception/lib/config_manager",
         "//modules/perception/obstacle/base:perception_obstacle_base",
         "//modules/perception/obstacle/common:perception_obstacle_common",
-        "//modules/perception/lib/config_manager:config_manager",
         "//modules/perception/obstacle/lidar/interface:perception_obstacle_lidar_interface",
-        "//modules/common:common",
-        "//modules/common:log",
         "@eigen//:eigen",
-        "@pcl//:pcl"],
+        "@pcl//:pcl",
+    ],
 )
 
 cc_test(
@@ -50,12 +52,12 @@ cc_test(
     ],
     deps = [
         ":perception_obstacle_lidar_tracker_hm_tracker",
-        "//modules/perception/obstacle/lidar/object_builder/min_box:perception_obstacle_lidar_object_builder_min_box",
-        "//modules/perception/lib/config_manager:config_manager",
         "//modules/common:log",
+        "//modules/perception/lib/config_manager",
+        "//modules/perception/obstacle/lidar/object_builder/min_box:perception_obstacle_lidar_object_builder_min_box",
         "@gtest//:main",
-        "@pcl//:pcl"
-    ]
+        "@pcl//:pcl",
+    ],
 )
 
 cpplint()
