--- a/modules/prediction/container/obstacles/BUILD
+++ b/modules/prediction/container/obstacles/BUILD
@@ -45,11 +45,11 @@ cc_test(
         "//modules/prediction:prediction_testdata",
     ],
     deps = [
+        "//modules/common/util",
+        "//modules/perception/proto:perception_proto",
+        "//modules/prediction/common:prediction_gflags",
         "//modules/prediction/container/obstacles:obstacles_container",
         "@gtest//:main",
-        "//modules/prediction/common:prediction_gflags",
-        "//modules/perception/proto:perception_proto",
-        "//modules/common/util:util",
     ],
 )
 
@@ -64,11 +64,11 @@ cc_test(
         "//modules/prediction:prediction_testdata",
     ],
     deps = [
+        "//modules/common/util",
+        "//modules/perception/proto:perception_proto",
+        "//modules/prediction/common:prediction_gflags",
         "//modules/prediction/container/obstacles:obstacles_container",
         "@gtest//:main",
-        "//modules/prediction/common:prediction_gflags",
-        "//modules/perception/proto:perception_proto",
-        "//modules/common/util:util",
     ],
 )
 
