--- a/modules/prediction/evaluator/BUILD
+++ b/modules/prediction/evaluator/BUILD
@@ -22,11 +22,11 @@ cc_library(
     deps = [
         "//modules/common:log",
         "//modules/common:macro",
-        "//modules/prediction/evaluator/vehicle:mlp_evaluator",
+        "//modules/perception/proto:perception_proto",
         "//modules/prediction/container:container_manager",
         "//modules/prediction/container/obstacles:obstacles_container",
+        "//modules/prediction/evaluator/vehicle:mlp_evaluator",
         "//modules/prediction/proto:prediction_conf_proto",
-        "//modules/perception/proto:perception_proto",
         "@glog//:glog",
     ],
 )
@@ -40,11 +40,11 @@ cc_test(
         "//modules/prediction:prediction_testdata",
     ],
     deps = [
+        "//modules/common/util",
         "//modules/prediction/evaluator:evaluator_manager",
         "//modules/prediction/proto:prediction_conf_proto",
-        "//modules/common/util:util",
         "@gtest//:main",
-    ]
+    ],
 )
 
 cc_library(
