--- a/modules/perception/obstacle/lidar/segmentation/cnnseg/BUILD
+++ b/modules/perception/obstacle/lidar/segmentation/cnnseg/BUILD
@@ -7,18 +7,18 @@ cc_library(
     srcs = ["cnn_segmentation.cc"],
     hdrs = ["cnn_segmentation.h"],
     deps = [
-        "@caffe//:lib",
         "//modules/common:log",
-        "//modules/common/util:util",
-        "//modules/perception/lib/pcl_util:pcl_util",
+        "//modules/common/util",
+        "//modules/perception/lib/base",
+        "//modules/perception/lib/config_manager",
+        "//modules/perception/lib/pcl_util",
         "//modules/perception/obstacle/base:perception_obstacle_base",
         "//modules/perception/obstacle/lidar/interface:perception_obstacle_lidar_interface",
-        "//modules/perception/obstacle/lidar/segmentation/cnnseg/proto:cnnseg_proto",
-        "//modules/perception/obstacle/lidar/segmentation/cnnseg:cnnseg_util",
-        "//modules/perception/obstacle/lidar/segmentation/cnnseg:cnnseg_feature_generator",
         "//modules/perception/obstacle/lidar/segmentation/cnnseg:cnnseg_cluster2d",
-        "//modules/perception/lib/base:base",
-        "//modules/perception/lib/config_manager:config_manager",
+        "//modules/perception/obstacle/lidar/segmentation/cnnseg:cnnseg_feature_generator",
+        "//modules/perception/obstacle/lidar/segmentation/cnnseg:cnnseg_util",
+        "//modules/perception/obstacle/lidar/segmentation/cnnseg/proto:cnnseg_proto",
+        "@caffe//:lib",
     ],
 )
 
@@ -33,12 +33,12 @@ cc_library(
     srcs = ["feature_generator.cc"],
     hdrs = ["feature_generator.h"],
     deps = [
-         "@caffe//:lib",
-         "//modules/common:log",
-         "//modules/perception/lib/pcl_util:pcl_util",
-         "@eigen//:eigen",
-         "//modules/perception/obstacle/lidar/segmentation/cnnseg/proto:cnnseg_proto",
-         "//modules/perception/obstacle/lidar/segmentation/cnnseg:cnnseg_util"
+        "//modules/common:log",
+        "//modules/perception/lib/pcl_util",
+        "//modules/perception/obstacle/lidar/segmentation/cnnseg:cnnseg_util",
+        "//modules/perception/obstacle/lidar/segmentation/cnnseg/proto:cnnseg_proto",
+        "@caffe//:lib",
+        "@eigen//:eigen",
     ],
 )
 
@@ -46,12 +46,12 @@ cc_library(
     name = "cnnseg_cluster2d",
     hdrs = ["cluster2d.h"],
     deps = [
-         "@caffe//:lib",
-         "//modules/common:log",
-         "//modules/perception/lib/pcl_util:pcl_util",
-         "//modules/perception/obstacle/base:perception_obstacle_base",
-         "//modules/perception/obstacle/common:perception_obstacle_common",
-         "//modules/perception/obstacle/lidar/segmentation/cnnseg:cnnseg_util",
+        "//modules/common:log",
+        "//modules/perception/lib/pcl_util",
+        "//modules/perception/obstacle/base:perception_obstacle_base",
+        "//modules/perception/obstacle/common:perception_obstacle_common",
+        "//modules/perception/obstacle/lidar/segmentation/cnnseg:cnnseg_util",
+        "@caffe//:lib",
     ],
 )
 
@@ -63,18 +63,18 @@ cc_test(
     ],
     data = [
         "//modules/perception:perception_data",
-        "//modules/perception/conf:perception_config",
         "//modules/perception:perception_model",
+        "//modules/perception/conf:perception_config",
     ],
     deps = [
-        "@gtest//:main",
-        "@pcl//:pcl",
-        "@opencv2//:core",
+        "perception_obstacle_lidar_segmention_cnnseg",
         "//modules/common:log",
         "//modules/perception/common:perception_common",
         "//modules/perception/lib/pcl_util",
         "//modules/perception/obstacle/base:perception_obstacle_base",
-        "perception_obstacle_lidar_segmention_cnnseg",
+        "@gtest//:main",
+        "@opencv2//:core",
+        "@pcl//:pcl",
     ],
 )
 
