--- a/modules/perception/obstacle/lidar/segmentation/cnnseg/proto/BUILD
+++ b/modules/perception/obstacle/lidar/segmentation/cnnseg/proto/BUILD
@@ -3,13 +3,13 @@ package(default_visibility = ["//visibility:public"])
 cc_proto_library(
     name = "cnnseg_proto",
     deps = [
-        ":cnnseg_proto_lib"
-    ]
+        ":cnnseg_proto_lib",
+    ],
 )
 
 proto_library(
     name = "cnnseg_proto_lib",
     srcs = [
-        "cnnseg.proto"
-    ]
+        "cnnseg.proto",
+    ],
 )
