--- a/modules/perception/obstacle/lidar/visualizer/opengl_visualizer/BUILD
+++ b/modules/perception/obstacle/lidar/visualizer/opengl_visualizer/BUILD
@@ -7,30 +7,33 @@ cc_library(
     srcs = [
         "camera.cc",
         "frame.cc",
+        "frame_content.cc",
         "glfw_viewer.cc",
         "opengl_visualizer.cc",
-        "frame_content.cc",
         "pcl_vis_util.cc",
-        ],
+    ],
     hdrs = [
-        "frame.h",
         "camera.h",
+        "frame.h",
+        "frame_content.h",
         "glfw_viewer.h",
         "opengl_visualizer.h",
-        "frame_content.h",
         "pcl_vis_util.h",
-        ],
+    ],
+    copts = [
+        "-Wno-deprecated",
+    ],
     deps = [
-        "//modules/perception/lib/pcl_util:pcl_util",
         "//modules/common:log",
+        "//modules/perception/lib/base",
+        "//modules/perception/lib/pcl_util",
         "//modules/perception/obstacle/base:perception_obstacle_base",
-        "//modules/perception/lib/base:base",
         "//modules/perception/obstacle/common:perception_obstacle_common",
         "@eigen//:eigen",
-        "@pcl//:pcl",
-        "@vtk//:vtk",
         "@glew//:glew",
         "@glfw//:glfw",
+        "@pcl//:pcl",
+        "@vtk//:vtk",
     ],
 )
 
