--- a/modules/prediction/container/BUILD
+++ b/modules/prediction/container/BUILD
@@ -7,8 +7,8 @@ cc_library(
     srcs = ["container_manager.cc"],
     hdrs = ["container_manager.h"],
     deps = [
-        "//modules/common:macro",
         "//modules/common:log",
+        "//modules/common:macro",
         "//modules/common/adapters/proto:adapter_config_proto",
         "//modules/prediction/container/obstacles:obstacles_container",
         "//modules/prediction/container/pose:pose_container",
@@ -25,10 +25,10 @@ cc_test(
         "//modules/prediction:prediction_testdata",
     ],
     deps = [
+        "//modules/common/util",
         "//modules/prediction/container:container_manager",
-        "//modules/common/util:util",
         "@gtest//:main",
-    ]
+    ],
 )
 
 cc_library(
