Hm tracker dev (#507)
* add file util

* fixed Aug 4th conflicts

--- a/modules/perception/obstacle/common/BUILD
+++ b/modules/perception/obstacle/common/BUILD
@@ -36,6 +36,10 @@ cc_test(
     size = "small",
     srcs = [
         "geometry_util_test.cc",
+        "pose_util_test.cc",
+    ],
+    data = [
+        "//modules/perception:perception_data",
     ],
     deps = [
         ":perception_obstacle_common",
