Add initial test_utils in routing/graph

--- a/modules/routing/graph/BUILD
+++ b/modules/routing/graph/BUILD
@@ -44,4 +44,21 @@ cc_library(
     ],
 )
 
+cc_library(
+    name = "routing_graph_test_utils",
+    srcs = [
+        "test_utils.cc",
+    ],
+    hdrs = [
+        "test_utils.h",
+    ],
+    deps = [
+        "@gtest//:main",
+        ":routing_topo_node",
+        ":routing_topo_graph",
+        "//modules/map/proto:map_proto",
+    ],
+)
+
+
 cpplint()
