planning: added garage_test (#547)
todo fix the localization crash problem

--- a/modules/planning/integration_tests/BUILD
+++ b/modules/planning/integration_tests/BUILD
@@ -26,4 +26,25 @@ cc_library(
     ],
 )
 
+filegroup(
+    name = "garage_testdata",
+    srcs = glob([
+        "garage/**",
+    ]),
+)
+
+cc_test(
+    name = "garage_test",
+    srcs = [
+        "garage_test.cc",
+    ],
+    data = [
+        "garage_testdata",
+    ],
+    deps = [
+        ":planning_test_base",
+        "@gtest//:main",
+    ],
+)
+
 cpplint()
