add path_obstacle in st_graph_boundary (#573)

--- a/modules/planning/optimizer/st_graph/BUILD
+++ b/modules/planning/optimizer/st_graph/BUILD
@@ -28,6 +28,7 @@ cc_library(
         ":st_graph_point",
         "//modules/common:log",
         "//modules/common/math",
+        "//modules/planning/common:path_obstacle",
         "//modules/planning/proto:planning_proto",
     ],
 )
