Planning: fixed a bug on get_pathpoint_from_ref_s. (#587)

--- a/modules/planning/common/path/BUILD
+++ b/modules/planning/common/path/BUILD
@@ -43,6 +43,7 @@ cc_library(
         ":frenet_frame_path",
         "//modules/planning/common:planning_gflags",
         "//modules/planning/math:double",
+        "//modules/planning/reference_line",
     ],
 )
 
