--- a/modules/routing/topo_creator/BUILD
+++ b/modules/routing/topo_creator/BUILD
@@ -14,7 +14,7 @@ cc_library(
         "//external:gflags",
         "//modules/common",
         "//modules/map/proto:map_proto",
-        "//modules/routing/common",
+        "//modules/routing/common:routing_gflags",
         "//modules/routing/proto:routing_proto",
     ],
 )
@@ -34,7 +34,7 @@ cc_library(
         "//modules/common",
         "//modules/common/util",
         "//modules/map/proto:map_proto",
-        "//modules/routing/common",
+        "//modules/routing/common:routing_gflags",
         "//modules/routing/proto:routing_proto",
     ],
 )
@@ -51,7 +51,7 @@ cc_library(
         "//external:gflags",
         "//modules/common",
         "//modules/map/proto:map_proto",
-        "//modules/routing/common",
+        "//modules/routing/common:routing_gflags",
         "//modules/routing/proto:routing_proto",
     ],
 )
@@ -65,7 +65,7 @@ cc_binary(
         "//modules/common",
         "//modules/common:log",
         "//modules/map/proto:map_proto",
-        "//modules/routing/common",
+        "//modules/routing/common:routing_gflags",
         "//modules/routing/proto:routing_proto",
     ],
 )
