--- a/modules/routing/strategy/BUILD
+++ b/modules/routing/strategy/BUILD
@@ -22,7 +22,7 @@ cc_library(
         "//modules/common",
         "//modules/common/proto:common_proto",
         "//modules/map/proto:map_proto",
-        "//modules/routing/common",
+        "//modules/routing/common:routing_gflags",
         "//modules/routing/graph",
         "//modules/routing/proto:routing_proto",
     ],
