the default do not output obstacle pointcloud (#664)

--- a/modules/perception/conf/perception.conf
+++ b/modules/perception/conf/perception.conf
@@ -23,6 +23,13 @@
 --work_root=modules/perception
 
 ####################################################################
+# Flags from obstacle/base/object.cc
+# Is serialize and output object cloud.
+# type: bool
+# default: false
+--is_serialize_point_cloud=false
+
+####################################################################
 # Flags from obstacle/onboard/hdmap_input.cc
 # The hdmap file path.
 # type: string
