Planning: Added speed_limit_test.

--- a/modules/planning/common/BUILD
+++ b/modules/planning/common/BUILD
@@ -221,6 +221,18 @@ cc_library(
     ],
 )
 
+cc_test(
+    name = "speed_limit_test",
+    size = "small",
+    srcs = [
+        "speed_limit_test.cc",
+    ],
+    deps = [
+        ":speed_limit",
+        "@gtest//:main",
+    ],
+)
+
 cc_library(
     name = "planning_common",
     deps = [
