--- a/modules/hmi/proto/BUILD
+++ b/modules/hmi/proto/BUILD
@@ -31,5 +31,6 @@ proto_library(
     deps = [
         "//modules/canbus/proto:canbus_proto_lib",
         "//modules/common/proto:header_proto_lib",
+        "//modules/routing/proto:routing_proto_lib",
     ]
 )
