Add map file name gflag into modules/common/configs/config_gflags.cc (#716)
* fix perception compiling warning msg

* fix perception compiling warning msg

* fix perception compiling warning msg

* add map file name gflag into modules/common/configs/config_gflags.cc

--- a/modules/planning/integration_tests/BUILD
+++ b/modules/planning/integration_tests/BUILD
@@ -17,6 +17,7 @@ cc_library(
     deps = [
         "//modules/common:log",
         "//modules/common/adapters:adapter_manager",
+        "//modules/common/configs:config_gflags",
         "//modules/common/util",
         "//modules/common/vehicle_state",
         "//modules/planning:planning_impl",
