--- a/modules/prediction/evaluator/vehicle/BUILD
+++ b/modules/prediction/evaluator/vehicle/BUILD
@@ -11,6 +11,7 @@ cc_library(
         "mlp_evaluator.h",
     ],
     deps = [
+        "//modules/common/configs:config_gflags",
         "//modules/common/math:math_utils",
         "//modules/common/util",
         "//modules/map/proto:map_proto",
