--- a/modules/prediction/predictor/pedestrian/BUILD
+++ b/modules/prediction/predictor/pedestrian/BUILD
@@ -27,6 +27,7 @@ cc_test(
         "//modules/prediction:prediction_testdata",
     ],
     deps = [
+        "//modules/common/configs:config_gflags",
         "//modules/common/util",
         "//modules/perception/proto:perception_proto",
         "//modules/prediction/common:prediction_gflags",
