--- a/modules/planning/BUILD
+++ b/modules/planning/BUILD
@@ -15,6 +15,7 @@ cc_library(
         "//modules/common:apollo_app",
         "//modules/common:log",
         "//modules/common/adapters:adapter_manager",
+        "//modules/common/configs:config_gflags",
         "//modules/common/proto:pnc_point_proto",
         "//modules/common/vehicle_state",
         "//modules/decision/proto:decision_proto",
