--- a/modules/routing/topo_creator/BUILD
+++ b/modules/routing/topo_creator/BUILD
@@ -64,6 +64,7 @@ cc_binary(
         "//external:gflags",
         "//modules/common",
         "//modules/common:log",
+        "//modules/common/configs:config_gflags",
         "//modules/map/proto:map_proto",
         "//modules/routing/common:routing_gflags",
         "//modules/routing/proto:routing_proto",
