add online visualizer (#715)
* add online visualizer

* set the online visualization flag to false

--- a/modules/perception/conf/perception.conf
+++ b/modules/perception/conf/perception.conf
@@ -89,3 +89,7 @@
 # default: velodyne64
 --lidar_tf2_child_frame_id=velodyne64
 
+# enable visualization for debug
+# type: bool
+# default: false
+--enable_visualization=false
