--- a/modules/perception/obstacle/onboard/BUILD
+++ b/modules/perception/obstacle/onboard/BUILD
@@ -39,6 +39,7 @@ cc_library(
         "//modules/perception/obstacle/lidar/roi_filter/hdmap_roi_filter",
         "//modules/perception/obstacle/lidar/segmentation/cnnseg:perception_obstacle_lidar_segmention_cnnseg",
         "//modules/perception/obstacle/lidar/tracker/hm_tracker:perception_obstacle_lidar_tracker_hm_tracker",
+        "//modules/perception/obstacle/lidar/visualizer/opengl_visualizer:perception_obstacle_lidar_opengl_visualizer",
         "@eigen//:eigen",
         "@gtest//:gtest",
         "@ros//:ros_common",
